--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,26 @@
 body {
     color: #999;
 }
+
+.game{
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.row {
+    display: flex;
+}
+
+.cell {
+    width: 50px;
+    height: 50px;
+
+    border: solid 1px #000;
+    box-sizing: border-box;
+}
+
+.goblin {
+    width: 50px;
+    height: 50px;
+}
