--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,8 +1,12 @@
 body {
     color: #999;
+    display: flex;
+    
+    flex-wrap: wrap;
+    width: 200px;
 }
 
-.game{
+/* .game{
     width: 200px;
     margin-left: auto;
     margin-right: auto;
@@ -10,7 +14,7 @@ body {
 
 .row {
     display: flex;
-}
+} */
 
 .cell {
     width: 50px;
@@ -23,4 +27,8 @@ body {
 .goblin {
     width: 50px;
     height: 50px;
+
+    background-image: url("../image/goblin.png");
+    background-repeat: no-repeat;
+    background-size: contain;
 }
