--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,16 +6,6 @@ body {
     width: 200px;
 }
 
-/* .game{
-    width: 200px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.row {
-    display: flex;
-} */
-
 .cell {
     width: 50px;
     height: 50px;
@@ -31,4 +21,16 @@ body {
     background-image: url("../image/goblin.png");
     background-repeat: no-repeat;
     background-size: contain;
+
+    cursor: pointer;
+}
+
+.table {
+    width: 200px;
+    height: 200px;
+    margin-right: auto;
+    margin-left: auto;
+
+    border: solid 1px #000;
+
 }
